# framework-embedded

./: .gitignore  README.md
opendds/: CMakeLists.txt  CmakeLists.txt  main.cpp  main.h
opendds/inc/: client.h  data_listener_reader_impl.h  service.h  service_if.h
opendds/opendds_if/: Boilerplate.cpp  Boilerplate.h  DataReaderListenerImpl.cpp  DataReaderListenerImpl.h  opendds_if.cpp  opendds_if.h
opendds/opendds_if/config/idl/: Messenger.idl
opendds/soc/service_0/: CmakeLists.txt  main.cpp
opendds/soc/service_1/: CmakeLists.txt
opendds/src/: client.cpp  data_listener_reader_impl.cpp  service.cpp  service_if.cpp
samples/ecal/tcp/: CMakeLists.txt
samples/ecal/tcp/src/: person_rec.cpp  person_snd_tcp.cpp
samples/ecal/udp/: CMakeLists.txt
samples/ecal/udp/src/: person_snd_udp.cpp
samples/ecal/udp/src/protobuf/: animal.proto  house.proto  person.proto
